--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-# OPENAI_API_KEY=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
+# TODO: Set your OpenAI API key via a secure mechanism (e.g., local .env not committed to VCS, or deployment secrets manager).
+OPENAI_API_KEY=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
