--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,5 +2,6 @@ streamlit==1.31.1
 pandas==2.2.1
 numpy==1.26.4
 openai==1.60.0
-pillow>=12.1.0
+pillow>=7.1.0,<11
 matplotlib==3.8.0
+python-dotenv==1.0.1
